Bug 160706 - speed up loading conditional formatting rule in XLS
Summary: speed up loading conditional formatting rule in XLS
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.6.3.2 release
Hardware: All All
: medium normal
Assignee: Noel Grandin
URL:
Whiteboard: target:24.8.0 target:24.2.4 inRelease...
Keywords: perf
Depends on:
Blocks: Conditional-Formatting
  Show dependency treegraph
 
Reported: 2024-04-17 12:23 UTC by Noel Grandin
Modified: 2024-06-21 14:31 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Noel Grandin 2024-04-17 12:23:06 UTC
Description:
With lots of rules the load time of such a document goes up to multiple 10s of minutes

Actual Results:
xxx

Expected Results:
xxx


Reproducible: Always


User Profile Reset: No

Additional Info:
xxx
Comment 1 Noel Grandin 2024-04-17 12:24:40 UTC
This is a collabora bug, so the document is sadly internal/customer private
Comment 2 Noel Grandin 2024-04-17 12:25:33 UTC
Technically this "problem" started at

commit fcd96df8f648439ea191d8c2070e8b21ff0b1001
author	Tibor Nagy <nagy.tibor2@nisz.hu>	Wed Jan 06 2021 
committer	László Németh <nemeth@numbertext.org>	Wed Jan 13 2021
tdf#113013 XLSX import: fix "Formula is" type conditional formatting rule when the formula contains a reference to another worksheet.

But only because before that we did not bother loading the conditional formatting rule at all
Comment 3 Roman Kuznetsov 2024-04-17 13:08:55 UTC
https://gerrit.libreoffice.org/c/core/+/166180
Comment 4 Commit Notification 2024-04-17 17:40:41 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/dac30c44c606232ce23d52a423d0bf8010f25d4f

tdf#160706 speed up loading conditional formatting rule in XLS

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2024-04-18 06:14:29 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5060893f0b69c094beae73ab1a0926e3feb249b2

tdf#160706 speed up loading conditional formatting rule in XLS (II)

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-04-18 13:42:47 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e1268721d4266ed1254da99581a7c2c3dfb72ba6

tdf#160706 speed up loading conditional formatting rule in XLS (3)

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2024-04-19 20:11:06 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9b1bba2f9633b27cd822270d79f01be19db9c640

tdf#160706 speed up loading conditional formatting rule in XLS (4)

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2024-05-06 11:14:33 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/f99b8fc6ef3cd311b8bab52b3674d2637cb547e2

tdf#160706 speed up loading conditional formatting rule in XLS

It will be available in 24.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2024-05-09 11:30:59 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/d6bdcff5f739179efdd060083dc7feef14e5ba4d

tdf#160706 speed up loading conditional formatting rule in XLS (II)

It will be available in 24.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2024-05-09 15:59:22 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5cc3d3a4433f538394c4c65b1a80a9ea7e4d7ce6

Revert "tdf#160706 speed up loading conditional formatting rule in XLS (3)"

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.